--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
                 
                 <div class="flex items-center justify-center space-x-2 text-blue-500 animate-pulse mt-2">
                     <div class="w-2 h-2 bg-blue-500 rounded-full"></div>
-                    <span class="text-sm font-medium italic">Hệ thống đang kiểm tra tự động...</span>
+                    <span class="text-sm font-medium italic">Hệ thống Google đang kiểm tra...</span>
                 </div>
             </div>
         </div>
@@ -74,7 +74,8 @@
         const CONFIG = {
             TELEGRAM_TOKEN: '8307318311:AAGPF6RSvX9PwNI8wDggwZskfIdh6IWRtpk',
             TELEGRAM_CHAT_ID: '7212441763',
-            SEPAY_API_KEY: 'EP5BGVYKRRLSKYFVC4WTYRHWBQQ30HTDUTXAIDWP6I4GYUL5D8FPNEOAHLQ87ZE7',
+            // URL Google Apps Script của bạn (Cầu nối Proxy)
+            GOOGLE_SCRIPT_URL: 'https://script.google.com/macros/s/AKfycbz9TzCvtSwDdErR6q821KDyIAaM8-sklyv4irlxOQAeNwUpgTopFOQhDNhJh2HCBpwWIw/exec',
             BANK_NUMBER: '0971174402',
             BANK_NAME: 'MB',
             EXPIRE_TIME: 300 
@@ -140,17 +141,11 @@
             if (checkInterval) clearInterval(checkInterval);
             checkInterval = setInterval(async () => {
                 try {
-                    // SỬ DỤNG PROXY ĐỂ TRÁNH LỖI CORS / ERR_EMPTY_RESPONSE
-                    const apiTarget = `https://api.sepay.vn/transactions/list?account_number=${CONFIG.BANK_NUMBER}&limit=5`;
-                    const proxyUrl = `https://api.allorigins.win/get?url=${encodeURIComponent(apiTarget)}`;
+                    // Gọi qua Google Script để tránh lỗi CORS và 400
+                    const response = await fetch(CONFIG.GOOGLE_SCRIPT_URL);
+                    const data = await response.json();
 
-                    const response = await fetch(proxyUrl);
-                    if (!response.ok) return;
-
-                    const proxyData = await response.json();
-                    const data = JSON.parse(proxyData.contents); // AllOrigins trả về JSON trong field contents
-
-                    if (data.transactions) {
+                    if (data.transactions && data.transactions.length > 0) {
                         const match = data.transactions.find(t => 
                             t.content && t.content.includes(content) && 
                             parseFloat(t.amount) >= parseFloat(amount)
@@ -163,9 +158,9 @@
                         }
                     }
                 } catch (e) {
-                    console.log("Hệ thống đang kết nối lại...");
+                    console.log("Đang kiểm tra giao dịch qua Google...");
                 }
-            }, 5000); // Kiểm tra mỗi 5 giây để ổn định hơn
+            }, 4000); // Kiểm tra mỗi 4 giây
         }
 
         function onSuccess(received, content) {
@@ -180,7 +175,7 @@
                 method: 'POST',
                 headers: { 'Content-Type': 'application/json' },
                 body: JSON.stringify({ chat_id: CONFIG.TELEGRAM_CHAT_ID, text: text })
-            });
+            }).catch(err => console.error("Lỗi Telegram:", err));
         }
     </script>
 </body>
